# vkg

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.py  conanfile.py
.github/workflows/: export.yml
assets/shaders/: brdf.h  common.h  math.h  punctual_light.h  sampling.h  shading_common.h  tonemap.h
assets/shaders/atmosphere/: atmosphere.h  definitions.h  direct_irradiance.comp  direct_irradiance.comp.spv  functions.h  indirect_irradiance.comp  indirect_irradiance.comp.spv  lighting.h  multiple_scattering.comp  multiple_scattering.comp.spv  resources.h  scattering_density.comp  scattering_density.comp.spv  single_scattering.comp  single_scattering.comp.spv  transmittance.comp  transmittance.comp.spv
assets/shaders/common/: cull.comp  cull.comp.spv  cull_draw_group.comp  cull_draw_group.comp.spv  quad.vert  quad.vert.spv  transform.comp
assets/shaders/deferred/: composite.frag  deferred.vert  deferred.vert.spv  deferred_common.h  gbuffer.frag  gbuffer.frag.spv  lighting.frag  lighting.frag.spv  lighting.h  lighting_atmosphere.frag  lighting_atmosphere.frag.spv  lighting_atmosphere_msaa.frag  lighting_atmosphere_msaa.frag.spv  lighting_msaa.frag  lighting_msaa.frag.spv  lit.h  lit_atmos.frag  lit_atmos_csm.frag  lit_csm.frag  resources.h  transparent.frag  transparent.frag.spv  unlit.frag
assets/shaders/deferred/comp/: transform.comp  transform.comp.spv
assets/shaders/deferred/csm/: csm.h  csm.vert  csm.vert.spv
assets/shaders/pathtracing/: lighting.h  quad.vert  ray.rchit  ray.rchit.spv  ray.rgen  ray.rgen.spv  ray.rmiss  ray.rmiss.spv  ray_atmosphere.rchit  ray_atmosphere.rchit.spv  ray_atmosphere.rmiss  ray_atmosphere.rmiss.spv  resources.h  rt_common.h  shadow_ray.rmiss  shadow_ray.rmiss.spv  tonemap.frag  tonemap.frag.spv
assets/shaders/pathtracing/raster/: raster.frag  raster.frag.spv  raster.vert  raster.vert.spv  trans.frag  trans.frag.spv
assets/shaders/postprocess/: fxaa.frag  tonemap.comp
assets/shaders/raytracing/: ray.rchit  ray.rgen  ray.rgen.spv  ray.rmiss  ray.rmiss.spv  ray_atmos.rmiss  ray_atmosphere.rmiss  ray_atmosphere.rmiss.spv  resources.h  rt_common.h  shadow_ray.rmiss  shadow_ray.rmiss.spv  trace.h  vertex.h
assets/shaders/raytracing/comp/: tlas.comp  transform.comp  transform.comp.spv
assets/shaders/raytracing/hit/: brdf.rchit  brdf_atmos.rchit  rchit.h  reflective.rchit  reflective_atmos.rchit  refractive.rchit  refractive_atmos.rchit  transparent.rahit  unlit.rchit
assets/shaders/raytracing/primary/: brdf_direct.rchit  brdf_direct.rchit.spv  brdf_direct_atmosphere.rchit.spv  brdf_trace.rchit  brdf_trace.rchit.spv  brdf_trace_atmosphere.rchit  brdf_trace_atmosphere.rchit.spv  bsdf_trace.rchit  bsdf_trace_atmosphere.rchit  bsdf_trace_atmosphere.rchit.spv  lighting.h
assets/shaders/raytracing/raster/: composite.frag  copy_depth.frag  opaque.frag  predepth.frag  predepth.frag.spv  raster.frag  raster.frag.spv  raster.vert  raster.vert.spv  raster_resources.h  trans.frag  trans.frag.spv  transparent.frag
cmake/: symlink.cmake  symlink.py
src/vkg/base/: base.cpp  base.hpp  call_frame_updater.hpp  config.hpp  device.cpp  device.hpp  device_marker.cpp  instance.cpp  instance.hpp  swapchain.cpp  swapchain.hpp  vk_headers.hpp  window.cpp  window.hpp
src/vkg/c/: c_atmosphere.cpp  c_atmosphere.h  c_camera.cpp  c_camera.h  c_fpsmeter.cpp  c_fpsmeter.h  c_light.cpp  c_light.h  c_material.cpp  c_material.h  c_mesh.cpp  c_mesh.h  c_model.cpp  c_model.h  c_model_instance.cpp  c_model_instance.h  c_node.cpp  c_node.h  c_panning_camera.cpp  c_panning_camera.h  c_primitive.cpp  c_primitive.h  c_primitive_builder.cpp  c_primitive_builder.h  c_renderer.cpp  c_renderer.h  c_scene.cpp  c_scene.h  c_shadowmap.cpp  c_shadowmap.h  c_vec.cpp  c_vec.h  c_window.cpp  c_window.h
src/vkg/math/: frustum.cpp  frustum.hpp  glm_common.hpp  matrices.cpp  matrices.hpp
src/vkg/render/: allocation.hpp  buffer_allocation.hpp  draw_group.hpp  ranges.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene_config.hpp  scene_frame.cpp  shade_model.hpp
src/vkg/util/: colors.hpp  fps_meter.cpp  fps_meter.hpp  syntactic_sugar.cpp  syntactic_sugar.hpp
test/: Sample.cpp  TestC.cpp  TestMetallicRoughness.cpp  TestRenderer.cpp  TestSimple.cpp  TestTexture.cpp  TestWOIT.cpp  test.cpp
(+151 files in other folders)
